# ustb-os-kernel

./: .gitignore
easy-fs-fuse/: .gitignore
kernel/: Cargo.toml  Makefile  build.rs
kernel/src/: app_loader.rs  batch.rs  boot.rs  config.rs  main.rs  timer.rs
kernel/src/mm/: mod.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: manager.rs  mod.rs  task.rs
kernel/src/trap/: context.rs  mod.rs
kernel/src/utils/: console.rs  lang_items.rs  mod.rs  sbi.rs
user/: Makefile
user/c/: Makefile
user/c/apps/: read.c
user/c/lib/: lib.h
user/rust/: Makefile
